<resources>
    <string name="app_name">NX Manager</string>

    <string name="icError">No Internet Connection, Please try again later.</string>
    <string name="cvError">Error: NX Kernel not found.</string>

    <string name="loading">Loading...</string>
    <string name="current_version">Current Version:</string>
    <string name="latest_version">Latest Version:</string>
    <string name="current_firmware">Current Firmware:</string>
    <string name="latest_firmware">Latest Firmware:</string>
    <string name="soldier">Soldier9312\'s ROM</string>
    <string name="xda">XDA Thread</string>
    <string name="xda_rom">ROM XDA THREAD</string>
    <string name="soldier_site">SoLdieR9312\'s Site</string>

    <string name="nox">Noxxxious</string>
    <string name="dev">Itai Levin (Electric)</string>
    <string name="eparon">Eparon Co. Ltd</string>

    <string name="changelog"><u>Changelog</u></string>
    <string name="github"><u>Github</u></string>
</resources>
